# Colocviu2

./: Admin.cpp  Admin.h  CMakeLists.txt  Concurent.cpp  Concurent.h  Cros.cpp  Cros.h  Maraton.cpp  Maraton.h  Meniu.cpp  Meniu.h  ModelColocviu2.cpp  Proba.cpp  Proba.h  README.md  SemiMaraton.cpp  SemiMaraton.h  Sprint.cpp  Sprint.h  main.cpp
