cmake_minimum_required(VERSION 3.27)
project(ModelColocviu1V2)

set(CMAKE_CXX_STANDARD 17)

add_executable(ModelColocviu1V2 main.cpp
        Proba.cpp
        Proba.h
        Maraton.cpp
        Maraton.h
        SemiMaraton.cpp
        SemiMaraton.h
        Sprint.cpp
        Sprint.h
        Cros.cpp
        Cros.h
        Concurent.cpp
        Concurent.h
        Meniu.cpp
        Meniu.h
        Admin.cpp
        Admin.h
        ModelColocviu2.cpp)
